# BreweryManager

./: .brewery_window_config.json  .gitignore  BreweryManager.spec  CLAUDE_SESSION_WORKFLOW.md  COMMANDS.md  COMPUTER_CONFIGS.md  COMPUTER_PATHS.md  CONTINUATION_GUIDE.md  CRITICAL_READ_THIS.md  DATABASE_MIGRATIONS_PENDING.md  FINAL_STATUS.md  FIX_SYNC_INSTRUCTIONS.md  FOR_CLAUDE_PUSH_PROTOCOL.md  GIT_EXPLAINED_SIMPLY.md  GOOGLE_SHEETS_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  LATEST_WALKTHROUGH.md  LOCAL_SETUP_GUIDE.md  Launch_Brewery_Manager.bat  PC_INFO.md  PROGRESS.md  PROGRESS_TRACKER.md  PROJECT_STATUS.md  QUICK_SESSION_START.md  QUICK_START.md  README.md  SESSION_LOG_2025-11-07.md  SESSION_LOG_2025-11-08.md  SESSION_LOG_2025-11-09.md  SESSION_LOG_2025-11-10.md  SESSION_LOG_2025-11-11.md  SESSION_LOG_2025-11-12-part2.md  SESSION_LOG_2025-11-12.md  SESSION_LOG_2025-11-13_011CV5eeEC2MxDVrZD1d9G6p.md  SESSION_LOG_2025-11-13_01YXmg9xMZufHQjPCnKjx6xT.md  SESSION_LOG_2025-11-17_0194aExHtBNpeEuauYj96Kvm.md  SESSION_LOG_2025-11-18_015MECmeLgcS95t2bHSnVb24.md  SESSION_LOG_2025-11-18_01NXxfYeUfGj4t7fo3VfjLat.md  SESSION_LOG_2025-11-18_brewery_015MECmeLgcS95t2bHSnVb24.md  SESSION_LOG_2025-12-16_OqaO6.md  (+57 more)
.agent/workflows/: rebuild_exe.md
.claude/commands/: start-session.md
scripts/: __init__.py  add_sample_data.py  check_containers.py  check_quality.py  check_syntax.py  fix_db_manual.py  format_code.py  full_check.py  migrate_database.py  run_tests.py  verify_changes.py  verify_interactivity.py  verify_invoice_query.py  verify_offline_fix.py  verify_sales_dialog.py
src/: __init__.py
src/config/: __init__.py  constants.py
src/data_access/: add_container_tables.py  fix_cache_api.py  fix_duty_returns_table.py  fix_spoilt_beer_table.py  google_sheets_client.py  migrate_add_vat.py  migrate_batches_schema.py  migrate_duty_system.py  migrate_label_printing.py  migrate_products_module.py  populate_test_data.py  sqlite_cache.py  sync_manager.py
src/gui/: assistant.py  batches.py  customers.py  dashboard.py  delivery.py  duty.py  inventory.py  invoicing.py  labels.py  main_window.py  order_view.py  products.py  recipes.py  reports.py  sales.py  sales_screen.py  settings.py
src/gui/components/: __init__.py  date_entry.py  scrollable_frame.py
src/testing/: generate_test_data.py
src/utilities/: ai_client.py  auth.py  calculations.py  date_utils.py  label_printer.py  theme_manager.py  verify_enhancements.py  window_manager.py
tests/: __init__.py  conftest.py  test_customer_dialog.py
tests/integration/: __init__.py
tests/unit/: test_theme_manager.py
